--- a/packages/@okta/vuepress-theme-prose/assets/css/components/_signUp.scss
+++ b/packages/@okta/vuepress-theme-prose/assets/css/components/_signUp.scss
@@ -86,23 +86,5 @@
       color: $white;
     }
     color: $white;
-
-    .logo-wrapper {
-      margin: 40px 0 0 0;
-      width: 338px;
-      @include media("<=phone") {
-        width: 250px;
-      }
-      h4 {
-        font-size: 16px;
-        margin: 0 0 18px 0;
-        color: $white;
-      }
-      .partners-logo {
-        width: 100%;
-        display: inline-flex;
-        justify-content: space-between;
-      }
-    }
   }
 }
